--- a/WKExpressionInput/Base.lproj/Main.storyboard
+++ b/WKExpressionInput/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="tennis" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="n1V-Su-p48" customClass="WKExpressionTextView">
-                                <rect key="frame" x="180" y="63" width="240" height="128"/>
+                                <rect key="frame" x="175" y="28" width="240" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="afO-6t-XFa"/>
@@ -29,7 +29,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Egq-Nz-rv0">
-                                <rect key="frame" x="0.0" y="326" width="600" height="190"/>
+                                <rect key="frame" x="0.0" y="172" width="600" height="190"/>
                                 <color key="backgroundColor" red="0.8392156959" green="0.8392156959" blue="0.8392156959" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="190" id="nY3-XC-j4F"/>
@@ -38,14 +38,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="n1V-Su-p48" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-173" id="62c-o5-6iH"/>
+                            <constraint firstItem="n1V-Su-p48" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-208" id="62c-o5-6iH"/>
                             <constraint firstAttribute="trailing" secondItem="Egq-Nz-rv0" secondAttribute="trailing" constant="49" id="7zJ-Iq-jBj"/>
                             <constraint firstItem="Egq-Nz-rv0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="H9D-s4-zzD"/>
                             <constraint firstItem="Egq-Nz-rv0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="HbU-Un-pXA"/>
-                            <constraint firstItem="n1V-Su-p48" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QdR-sx-knU"/>
+                            <constraint firstItem="n1V-Su-p48" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-5" id="QdR-sx-knU"/>
                             <constraint firstItem="Egq-Nz-rv0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="h0a-29-Qcn"/>
                             <constraint firstItem="Egq-Nz-rv0" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="i32-50-Faf"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Egq-Nz-rv0" secondAttribute="bottom" constant="84" id="qsG-pU-xcQ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Egq-Nz-rv0" secondAttribute="bottom" constant="238" id="qsG-pU-xcQ"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
