--- a/WKExpressionInput/Base.lproj/Main.storyboard
+++ b/WKExpressionInput/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="height" constant="128" id="afO-6t-XFa"/>
                                     <constraint firstAttribute="width" constant="240" id="mdr-Er-bEv"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Egq-Nz-rv0">
@@ -57,6 +57,7 @@
                     </view>
                     <connections>
                         <outlet property="expressionBG" destination="Egq-Nz-rv0" id="M4M-0m-ZqD"/>
+                        <outlet property="expressionBGBottomConstraint" destination="qsG-pU-xcQ" id="Jof-dc-Zaa"/>
                         <outlet property="textView" destination="n1V-Su-p48" id="kXk-0S-1Hg"/>
                     </connections>
                 </viewController>
